open sourced project

--- a/templates/submission-result.htm
+++ b/templates/submission-result.htm
@@ -25,6 +25,12 @@
         position:    relative;
         top:         135px;
     }
+
+    #results > pre {
+        font-size: 60%;
+        width:     50%;
+        border:    1px black solid;
+    }
 </style>
 </head>
 
